1、vm86mon中的重要错误修改； 2、目前，在qemu中可以切换到图形模式并正常画图， 但是在bochs中只能切换到图形模式，不能画图；

--- a/epos.tex
+++ b/epos.tex
@@ -61,7 +61,13 @@
 \newpage
 \lstinputlisting[label=app/crt0.S,caption=app/crt0.S]{app/crt0.S}
 \newpage
+\lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/syscall.h}
+\newpage
 \lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/syscall.S}
+\newpage
+\lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/vm86.c}
+\newpage
+\lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/video.c}
 \newpage
 \lstinputlisting[language=C,label=app/main.c,caption=app/main.c]{app/main.c}
 \newpage
