1、增加了画棋盘的函数； 2、整理了代码，以方便打印输出；

--- a/epos.tex
+++ b/epos.tex
@@ -61,13 +61,13 @@
 \newpage
 \lstinputlisting[label=app/crt0.S,caption=app/crt0.S]{app/crt0.S}
 \newpage
-\lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/syscall.h}
+\lstinputlisting[language=C,label=app/syscall.h,caption=app/syscall.h]{app/syscall.h}
 \newpage
 \lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/syscall.S}
 \newpage
-\lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/vm86.c}
+\lstinputlisting[language=C,label=app/vm86.c,caption=app/vm86.c]{app/vm86.c}
 \newpage
-\lstinputlisting[label=app/syscall.S,caption=app/syscall.S]{app/video.c}
+\lstinputlisting[language=C,label=app/video.c,caption=app/video.c]{app/video.c}
 \newpage
 \lstinputlisting[language=C,label=app/main.c,caption=app/main.c]{app/main.c}
 \newpage
