--- a/docs/epos.tex
+++ b/docs/epos.tex
@@ -1,8 +1,18 @@
 \documentclass[CJKutf8,xcolor=pdftex,dvipsnames,table]{report}
+\usepackage{hyperref}
+\hypersetup{
+  pdftitle={Operating System Concepts},
+  pdfauthor={Hong MingJian},
+  pdfsubject={The EPOS Source code},
+%  pdfpagemode={FullScreen},
+  colorlinks={true},
+  linkcolor={blue},
+}
 \usepackage{CJKutf8}
 \usepackage{minted} %  -shell-escape
 \usepackage{caption} % for \captionof
 \usepackage{pgffor} % for \foreach
+\usepackage{listings}
 
 \title{THE EPOS SOURCE CODE}
 \author{洪明坚\ 重庆大学软件学院}
