--- a/docs/epos.tex
+++ b/docs/epos.tex
@@ -27,55 +27,55 @@
 \listoflistings
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{make}{../Makefile}
 \captionof{listing}{Makefile}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{make}{../Makefile}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{make}{../Makefile.inc}
 \captionof{listing}{Makefile.inc}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{make}{../Makefile.inc}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{c}{../include/syscall-nr.h}
 \captionof{listing}{include/syscall-nr.h}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{c}{../include/syscall-nr.h}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{make}{../kernel/Makefile}
 \captionof{listing}{kernel/Makefile}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{make}{../kernel/Makefile}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{c}{../kernel/kernel.ld.in}
 \captionof{listing}{kernel/kernel.ld.in}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{c}{../kernel/kernel.ld.in}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{gas}{../kernel/entry.S}
 \captionof{listing}{kernel/entry.S}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{gas}{../kernel/entry.S}
 
 \foreach \n in
 {machdep.c,startup.c,task.c,page.c,frame.c,timer.c,kbd.c,cpu.h,kernel.h,machdep.h}{
     \newpage
-    \inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{c}{../kernel/\n}
     \captionof{listing}{kernel/\n}
+    \inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{c}{../kernel/\n}
 }
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{make}{../userapp/Makefile}
 \captionof{listing}{userapp/Makefile}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{make}{../userapp/Makefile}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{gas}{../userapp/lib/crt0.S}
 \captionof{listing}{userapp/lib/crt0.S}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{gas}{../userapp/lib/crt0.S}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{c}{../userapp/main.c}
 \captionof{listing}{userapp/main.c}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{c}{../userapp/main.c}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{gas}{../userapp/lib/syscall-wrapper.S}
 \captionof{listing}{userapp/lib/syscall-wrapper.S}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{gas}{../userapp/lib/syscall-wrapper.S}
 
 \newpage
-\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm]{c}{../userapp/include/syscall.h}
 \captionof{listing}{userapp/include/syscall.h}
+\inputminted[linenos,numbersep=5pt,frame=lines,framesep=2mm,breaklines,tabsize=2]{c}{../userapp/include/syscall.h}
 
 \end{CJK*}
 \end{document}
